--- a/public/subscribeProduct.html
+++ b/public/subscribeProduct.html
@@ -14,7 +14,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="col-2"> 
         <a class="navbar-brand" href="#">
-          <img src="/image/logo.png" alt="">
+          <img src="./image/logo.png" alt="">
         </a>
       </div>
       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
@@ -23,10 +23,10 @@
       <div class="collapse navbar-collapse" id="navbarNavDropdown">
         <ul class="navbar-nav col-12">
           <li class="fill button nav-item">
-            <a class="nav-link" href="/index.html">Accueil <span class="sr-only">(current)</span></a>
+            <a class="nav-link" href="./index.html">Accueil <span class="sr-only">(current)</span></a>
           </li>
           <li class="fill button nav-item active">
-            <a class="nav-link" href="/subscribeProduct.html">Inscrire mon produit</a>
+            <a class="nav-link" href="./subscribeProduct.html">Inscrire mon produit</a>
           </li>
           <li class="fill button nav-item">
             <a class="nav-link" href="#">A propos</a>
@@ -66,10 +66,13 @@
             <strong>Nom de la brasserie</strong>&nbsp;<p id="brand-beer-display"></p>
           </li>
           <li class="row mt-3 data-subscribe-display-row">
-            <strong>Nom de la brasserie</strong>&nbsp;<p id="brand-beer-display"></p>
+            <strong>Nom de la bière</strong>&nbsp;<p id="name-beer-display"></p>
           </li>
           <li class="row mt-3 data-subscribe-display-row">
-            <strong>Nom de la brasserie</strong>&nbsp;<p id="brand-beer-display"></p>
+            <strong>Année de production</strong>&nbsp;<p id="year-beer-display"></p>
+          </li>
+          <li id="data-subscribe-step-display" class="row mt-3 data-subscribe-step-display-row">
+            <strong>Année de production</strong>&nbsp;<p id="step-beer-display"></p>
           </li>
         </ul>
       </div>
@@ -80,19 +83,19 @@
     <div class="container my-3 py-3">  
       <div class="row col-12 mx-auto">
         <div class="col-3">
-          <div class="col-6 mt-4 mx-auto"><img class="icon" src="/image/icon-beer1.png" alt=""></div>
+          <div class="col-6 mt-4 mx-auto"><img class="icon" src="./image/icon-beer1.png" alt=""></div>
           <p class="col-10 mt-3 mx-auto text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cupiditate incidunt culpa.</p>
         </div>
         <div class="col-3">
-          <div class="col-6 mt-4 mx-auto"><img class="icon" src="/image/icon-beer2.png" alt=""></div>
+          <div class="col-6 mt-4 mx-auto"><img class="icon" src="./image/icon-beer2.png" alt=""></div>
           <p class="col-10 mt-3 mx-auto text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cupiditate incidunt culpa.</p>
         </div>
         <div class="col-3">
-          <div class="col-6 mt-4 mx-auto"><img class="icon" src="/image/icon-beer3.png" alt=""></div>
+          <div class="col-6 mt-4 mx-auto"><img class="icon" src="./image/icon-beer3.png" alt=""></div>
           <p class="col-10 mt-3 mx-auto text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cupiditate incidunt culpa.</p>
         </div>
         <div class="col-3">
-          <div class="col-6 mt-4 mx-auto"><img class="icon" src="/image/icon-beer4.png" alt=""></div>
+          <div class="col-6 mt-4 mx-auto"><img class="icon" src="./image/icon-beer4.png" alt=""></div>
           <p class="col-10 mt-3 mx-auto text-center">Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis cupiditate incidunt culpa.</p>
         </div>
   
@@ -107,12 +110,12 @@
         <div class="col-4">
           <ul class="mx-auto">
             <li>
-              <a href="/index.html">
+              <a href="./index.html">
                 Accueil
               </a>
             </li>
             <li class="my-2">
-              <a href="/subscribeProduct.html">
+              <a href="./subscribeProduct.html">
                 Inscrire mon produit
               </a>
             </li>
@@ -136,12 +139,12 @@
               </a>
             </li>
             <li class="my-2">
-              <a href="/index.html">
+              <a href="./index.html">
                 Appli
               </a>
             </li>
             <li class="my-2">
-              <a href="/subscribeProduct.html">
+              <a href="./subscribeProduct.html">
                 Inscrire mon produit
               </a>
             </li>
@@ -155,12 +158,12 @@
         <div class="col-4">
           <ul>
             <li>
-              <a href="/index.html">
+              <a href="./index.html">
                 Accueil
               </a>
             </li>
             <li class="my-2">
-              <a href="/subscribeProduct.html">
+              <a href="./subscribeProduct.html">
                 Inscrire mon produit
               </a>
             </li>
@@ -201,8 +204,10 @@
       </div>
     </div>
   </section>
-<script src="/js/script.js"></script>
-<script src="/js/script-rgpd.js"></script>
+<script src="./js/script.js"></script>
+<script src="./js/script-rgpd.js"></script>
+<script src="./js/subscribe-product.js"></script>
+
 <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
