--- a/public/subscribeProduct.html
+++ b/public/subscribeProduct.html
@@ -5,6 +5,7 @@
   <title>Accueil</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Brawler&family=Roboto:ital,wght@0,500;1,500&display=swap" rel="stylesheet">
+  <script src="./js/cookies.js"></script>
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   <link rel="stylesheet" href="css/style.css">
 
@@ -57,9 +58,6 @@
 
             <label class="mb-0 mt-4" for="start-step-beer">Qu'elle est son point de départ</label>
             <input class="form-control text-input col-12" type="text" id="start-step-beer" name="start-step-beer" placeholder="Point de départ" accept="plain/text"/>
-
-            <label class="mb-0 mt-4" for="step-number-beer">Combien d'étape à parcourus votre bière ?</label>
-            <input class="form-control text-input col-12" type="number" id="step-number-beer" name="step-number-beer" max="6" min="1" placeholder="1" accept="plain/text"/>
 
             <div id="step-display-box" class="card p-3 mt-4">
               <label class="mb-0" for="step-local-beer-1">Alors, par où est-elle passé ?</label>
